--- a/style.css
+++ b/style.css
@@ -292,6 +292,7 @@ ul.add-currency-list li.disabled {
     margin-top: 2rem;
     text-align: center;
     color: white;
+    font-size: 16px;
 }
 
 .link{
